Bug 481553 - Dolphin crashes at start
Summary: Dolphin crashes at start
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-19 20:39 UTC by Nicolas Fella
Modified: 2024-02-21 16:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-02-19 20:39:14 UTC
#0  QTimer::stop (this=0x0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qtimer.cpp:240
#1  0x00007ffff57d7c88 in QWidget::event (this=0xcf1760, event=0x7fffffffcfe0) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:9375
#2  0x00007ffff5781a71 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xcf1760, e=0x7fffffffcfe0)
    at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qapplication.cpp:3298
#3  0x00007ffff455f1b8 in QCoreApplication::notifyInternal2 (receiver=0xcf1760, event=0x7fffffffcfe0)
    at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1134
#4  0x00007ffff455f379 in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>)
    at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1575
#5  0x00007ffff57d2cff in QWidgetPrivate::hide_helper (this=this@entry=0xd1c9e0) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:8240
#6  0x00007ffff57d6bba in QWidgetPrivate::setVisible (this=0xd1c9e0, visible=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:8433
#7  0x000000000046ea63 in DolphinViewContainer::DolphinViewContainer (this=this@entry=0xcd8400, url=..., parent=<optimized out>)
    at /home/nico/kde/src/dolphin/src/dolphinviewcontainer.cpp:82
#8  0x000000000047923c in DolphinTabPage::createViewContainer (this=this@entry=0xce3330, url=...) at /home/nico/kde/src/dolphin/src/dolphintabpage.cpp:458
#9  0x000000000047b03d in DolphinTabPage::DolphinTabPage (this=this@entry=0xce3330, primaryUrl=..., secondaryUrl=..., parent=parent@entry=0xa1dad0)
    at /home/nico/kde/src/dolphin/src/dolphintabpage.cpp:35
#10 0x000000000047dc90 in DolphinTabWidget::openNewTab
    (this=this@entry=0xa1dad0, primaryUrl=<optimized out>, secondaryUrl=<optimized out>, position=position@entry=DolphinTabWidget::NewTabPosition::FollowSetting)
    at /home/nico/kde/src/dolphin/src/dolphintabwidget.cpp:169
#11 0x000000000047def3 in DolphinTabWidget::openNewActivatedTab (this=0xa1dad0, primaryUrl=<optimized out>, secondaryUrl=<optimized out>)
    at /home/nico/kde/src/dolphin/src/dolphintabwidget.cpp:157
#12 0x000000000047e58b in DolphinTabWidget::openDirectories (this=0xa1dad0, dirs=..., splitView=splitView@entry=false)
    at /home/nico/kde/src/dolphin/src/dolphintabwidget.cpp:226
#13 0x0000000000451e6c in DolphinMainWindow::openDirectories (this=this@entry=0x8056a0, dirs=..., splitView=splitView@entry=false)
    at /home/nico/kde/src/dolphin/src/dolphinmainwindow.cpp:248
#14 0x000000000044aa33 in main (argc=<optimized out>, argv=<optimized out>) at /home/nico/kde/src/dolphin/src/main.cpp:204

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.7

ADDITIONAL INFORMATION
Comment 1 Méven Car 2024-02-21 10:23:49 UTC
Git commit 19a59fad5f9f1d81245af9b294db943d7dcf7e02 by Méven Car, on behalf of Vlad Zahorodnii.
Committed on 21/02/2024 at 10:13.
Pushed by meven into branch 'master'.

Fix a crash in DolphinSearchBox::hideEvent()

M  +3    -1    src/search/dolphinsearchbox.cpp

https://invent.kde.org/system/dolphin/-/commit/19a59fad5f9f1d81245af9b294db943d7dcf7e02
Comment 2 Felix Ernst 2024-02-21 16:27:10 UTC
Git commit 1258bb94e3e092079d12c1dcded82a92b647347a by Felix Ernst, on behalf of Vlad Zahorodnii.
Committed on 21/02/2024 at 16:27.
Pushed by felixernst into branch 'release/24.02'.

Fix a crash in DolphinSearchBox::hideEvent()


(cherry picked from commit 19a59fad5f9f1d81245af9b294db943d7dcf7e02)

M  +3    -1    src/search/dolphinsearchbox.cpp

https://invent.kde.org/system/dolphin/-/commit/1258bb94e3e092079d12c1dcded82a92b647347a