Fix a crash in DolphinSearchBox::hideEvent()

BUG: 481553